--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,12 +2,35 @@
   "name": "dungeons-and-dice",
   "version": "0.1.0",
   "main": "dice.js",
-  "license": "MIT",
+  "license": "ISC",
   "author": {
     "name": "Benjamin Sidi",
     "email": "benjisidi@gmail.com"
   },
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "typecheck": "tsc --noEmit",
+    "typewatch": "tsc --noEmit --watch"
+  },
   "dependencies": {
-    "polynomial": "^1.4.5"
+    "d3": "^5.16.0",
+    "polynomial": "^1.4.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.7",
+    "babel-preset-nano-react-app": "^0.1.0",
+    "parcel": "^2.0.0-alpha.3.2",
+    "typescript": "^3.8.3"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-typescript",
+      "babel-preset-nano-react-app"
+    ]
   }
 }
